refactor : Service 단위 테스트 코드 작성을 위한 리팩토링